Home page UI issue when only payload is visible
Home page UI issue when only payload is visible

--- a/server/public/css/homePage.css
+++ b/server/public/css/homePage.css
@@ -101,7 +101,7 @@ a:focus, a:hover {
     left : 147px;
     border-radius : 10px;
     padding : 10px 15px 10px 25px;
-    min-height : 340px;
+    min-height : 400px;
 }
 
 .mainDiv .innerDivinActive .span {
@@ -129,7 +129,7 @@ a:focus, a:hover {
     font-style: normal;
     color: #515151;
     text-align: left;
-    line-height: 18px;
+    line-height: 22px;
 }
 .mainDiv .innerDivinActive .inActiveDescriptive {
     color: #999999
